New about and changes to index.html in feature

--- a/Task9/about-us.html
+++ b/Task9/about-us.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div>
-      <p>Demo merge conflict. Changes to Index in feature branch</p>
+      <p>Demo merge conflict. About us.</p>
     </div>
   </body>
 </html>
